--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5"
+    "typescript": "^5",
     "@tailwindcss/postcss": "^1.0.0"
   }
 }
