--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^1.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5",
-    "@tailwindcss/postcss": "^1.0.0"
+    "typescript": "^5"
   }
 }
