--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
-  },
-  "devDependencies": {
+ "devDependencies": {
+  "@tailwindcss/postcss": "^0.1.0",
   "@types/node": "^20",
   "@types/react": "^19",
   "@types/react-dom": "^19",
