--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^12.23.6",
     "next": "15.4.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
@@ -21,7 +22,6 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
