--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.4.24",
+    "postcss": "^8.5.6",
     "typescript": "^5"
   }
 }
