--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "3.4.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "20.19.8",
     "@types/react": "19.1.8",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
+    "autoprefixer": "10.4.21",
+    "postcss": "8.5.6",
     "typescript": "^5"
   }
 }
